--- a/HTML_Javascript/실습 9.md
+++ b/HTML_Javascript/실습 9.md
@@ -109,3 +109,103 @@ sap.ui.define([
 </br>
 
 - Main2.view.xml
+```html
+<mvc:View controllerName="ycl2project082.controller.Main2"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page title="2025-10-30 화면">
+        <Text binding="{/company}" text="{state}" />
+        
+        <!-- <VBox id="idVBox" class="sapUiSmallMargin" binding="{/company}"> -->
+        <VBox id="idVBox" class="sapUiSmallMargin">
+            <Text text="VBox안에 데이터 : {main>name}" />
+            <Text text="VBox안에 데이터 : {main>street}" />
+            <Text text="VBox안에 데이터 : {main>city}" />
+            <Text text="VBox안에 데이터 : {main>state}" />
+        </VBox>
+
+        <Table id="idCustomers"
+            inset="false"
+            mode="SingleSelectLeft"
+            selectionChange="onSelectionChange"
+            items="{customer>/Customers}">
+            <columns>
+                <Column hAlign="Center">
+                    <Text text="CustomerName" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="Age" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="구분" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="PhoneNumber" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="Button" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Text text="{customer>CustomerName}" />
+                        <Text text="{customer>Age}" />
+                        <Text text="{
+                            path : 'customer>Age',
+                            formatter : '.fnFormatter'
+                        }" />
+                        <Text text="{customer>PhoneNumber}" />
+                        <!-- Expression Binding -->
+                        <Button text="Detail" visible="{= ${customer>Age} >=20 }" press="onPress" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+
+        <Table class="sapUiSmallMarginTop" id="idBookings" items="{customer>_Bookings}">
+            <columns>
+                <Column hAlign="Center">
+                    <Text text="AirlineID" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="AFlightDatege" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="Booking Number" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="Price" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="Currency" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="seatsMax" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="seatsOcc" />
+                </Column>
+                <Column hAlign="Center">
+                    <Text text="State" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Text text="{customer>AirlineID}" />
+                        <Text text="{customer>FlightDate}" />
+                        <Text text="{customer>BookingNumber}" />
+                        <Text text="{customer>Price}" />
+                        <Text text="{customer>Currency}" />
+                        <Text text="{customer>seatsMax}" />
+                        <Text text="{customer>seatsOcc}" />
+                        <Text text="{= ${customer>seatsMax} - ${customer>seatsOcc} === 0  ? '만석' 
+                        : ${customer>seatsMax} - ${customer>seatsOcc} &lt; 10 ? '모집중-출발확정' : '모집중-출발미정' }" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
