--- a/HTML_Javascript/실습 9.md
+++ b/HTML_Javascript/실습 9.md
@@ -15,6 +15,21 @@
 - model/Customers.json
 ```java
 {
+    "company" : {
+        "name" : "Acme Inc.",
+        "street" : "23 Franklin St.",
+        "city" : "Claremont",
+        "state" : "New Hampshire",
+        "zip" : "03301",
+        "revenue" : "1833990"
+    }
+}
+```
+</br>
+
+- model/Customers.json
+```java
+{
     "Customers": [
         { "CustomerName" : "장원영", "Age" : 12, "PhoneNumber" : "010-5421-5942", 
         "_Bookings" : [ { "AirlineID" : "AA", "FlightDate" : "2024-02-11", "BookingNumber": "2011", "Price":1000, "Currency":"EUR", "seatsMax": 500, "seatsOcc":450 },
