--- a/HTML_Javascript/실습 9.md
+++ b/HTML_Javascript/실습 9.md
@@ -7,6 +7,10 @@
 </br>
 
 <img width="779" height="339" alt="image" src="https://github.com/user-attachments/assets/eb76136f-3af3-4b79-a22b-6098bf300ed3" />
+</br>
+</br>
+
+<img width="770" height="373" alt="image" src="https://github.com/user-attachments/assets/ca0a4a79-c9cf-44ac-b81f-2125b499d960" />
 
 </br>
 </br>
