Update 웹 UI 프레임워크를 활용한 개발 1-2(10.30).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.30).md
@@ -218,6 +218,9 @@ let sPath = oBindingContext.getPath();
 
 - 사용자가 sap.m.Table에서 행(Row)을 클릭했을 때 자동으로 호출되는 이벤트 함수
 - 고객을 선택하면 그 고객의 _Bookings 데이터가 아래 테이블에 자동 표시됨
+- oEvent.getParameters() → 이벤트에 포함된 여러 값들을 가져옴.
+- .listItem → 사용자가 선택한 그 행(ColumnListItem) 객체
+- .getBindingContext("customer") → 선택된 아이템이 바인딩된 모델 경로(Context)를 가져옴.
 ```java
 onSelectionChange: function(oEvent) {
     // 이벤트 함수는 이벤트 객체가 파라미터로 들어온다
