--- a/HTML_Javascript/실습 11.md
+++ b/HTML_Javascript/실습 11.md
@@ -1,20 +1,13 @@
-### 예약(Booking) 관리 화면: 외부 포맷터 + 고객·예약 데이터 로드 실습
+### 계산기 + 결과 이력 테이블
 - 고객 정보와 예약 정보를 JSON 파일에서 불러오고, “Booking GO” 버튼을 눌렀을 때만 선택한 고객의 예약 내역이 아래 테이블에 표시되며, 외부 포맷터 파일을 불러와 나이에 따라 구분(성인/청소년/아동)을 표시하는 실습.
 </br>
 
-<img width="727" height="309" alt="image" src="https://github.com/user-attachments/assets/dc083287-19d3-4cf3-bc5b-f59edb814253" />
+<img width="773" height="369" alt="image" src="https://github.com/user-attachments/assets/4ed24c2f-8105-4528-9cf8-092d4efbfd82" />
+
 </br>
 </br>
 
-<img width="730" height="307" alt="image" src="https://github.com/user-attachments/assets/342316c4-d70c-49e9-bea7-aee7a6013822" />
-</br>
-</br>
-
-<img width="717" height="331" alt="image" src="https://github.com/user-attachments/assets/a45c0485-e42b-49ac-8474-88384254ed43" />
-</br>
-</br>
-
-<img width="730" height="343" alt="image" src="https://github.com/user-attachments/assets/76805edd-876f-4ef2-b814-2e31b9bc98ab" />
+<img width="773" height="360" alt="image" src="https://github.com/user-attachments/assets/5a08caa4-5891-42f7-aa4a-805acb1cb53f" />
 </br>
 </br>
 </br>
