--- a/HTML_Javascript/실습 11.md
+++ b/HTML_Javascript/실습 11.md
@@ -1,5 +1,5 @@
 ### 계산기 + 결과 이력 테이블
-- 고객 정보와 예약 정보를 JSON 파일에서 불러오고, “Booking GO” 버튼을 눌렀을 때만 선택한 고객의 예약 내역이 아래 테이블에 표시되며, 외부 포맷터 파일을 불러와 나이에 따라 구분(성인/청소년/아동)을 표시하는 실습.
+- 두 숫자와 연산자를 선택해 계산하고, 결과를 JSONModel 배열(/total_result)에 누적해서 그리드 테이블로 이력 표시하는 계산기 실습
 </br>
 
 <img width="773" height="369" alt="image" src="https://github.com/user-attachments/assets/4ed24c2f-8105-4528-9cf8-092d4efbfd82" />
@@ -11,3 +11,131 @@
 </br>
 </br>
 </br>
+
+- Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/m/MessageBox"
+], (Controller, JSONModel, MessageBox) => {
+    "use strict";
+
+    return Controller.extend("ycl2project082.controller.Main", {
+        onInit() {
+        let oData = { 
+                calcDatas : [ 
+                    { key : "PLUS", text : "+"},
+                    { key : "MINUS", text : "-"},
+                    { key : "MULTIPL", text : "*"},
+                    { key : "DIVIDE", text : "/"}
+                ],
+                total_result : []
+            };
+            let oModel = new JSONModel(oData);
+            this.getView().setModel(oModel, "select");
+        },
+        onCalc: function() {
+            let oModel = this.getView().getModel("select");
+            let Number1 = Number(this.byId("idNumber1").getValue());
+            let Number2 = Number(this.byId("idNumber2").getValue());
+
+            let oSelect = this.byId("idselect").getSelectedItem().getKey();
+            let result;
+
+            if(oSelect === "PLUS") {
+                oSelect="+";
+                result = Number1+Number2;
+            }
+            else if(oSelect === "MINUS") {
+                oSelect="-";
+                result = Number1-Number2;
+            }
+            else if(oSelect == "MULTIPL") {
+                oSelect="*";
+                result = Number1*Number2;
+            }
+            else if(oSelect === "DIVIDE") {
+                oSelect="/";
+                result = Number1/Number2;
+            }
+
+            let total_result = oModel.getProperty("/total_result");
+            total_result.push({
+                number1: Number1,
+                number2: Number2,
+                key: oSelect,
+                result: result
+            });
+            oModel.setProperty("/total_result", total_result);
+            MessageBox.show(`계산 결과는 ${result} 입니다!`);
+        }
+    });
+});
+```
+</br>
+
+- Main.view.xml
+```html
+<mvc:View controllerName="ycl2project083.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns:t="sap.ui.table"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <Input id="idNumber1" width="100%" />
+            <Select 
+                id="idselect" 
+                items="{select>/calcDatas}"
+                width="100%" 
+                showSecondaryValues="true">
+                <core:ListItem 
+                    key="{select>key}" 
+                    text="{select>text}" 
+                    additionalText="{select>key}"/>
+            </Select>
+            <Input id="idNumber2" width="100%" />
+            <Button text="계산하기" press="onCalc"
+                    width="100%" type="Emphasized" />
+
+            <t:Table rows="{select>/total_result}">
+                <t:columns>
+                    <t:Column>
+                        <Label text="Number1" />
+                        <t:template>
+                            <Text text="{select>number1}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="key" />
+                        <t:template>
+                            <Text text="{select>key}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="Number2" />
+                        <t:template>
+                            <Text text="{select>number2}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="=" />
+                        <t:template>
+                            <Text text="=" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="Result" />
+                        <t:template>
+                            <Text text="{select>result}" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+    </Page>
+</mvc:View>
+```
