--- a/HTML_Javascript/실습 12.md
+++ b/HTML_Javascript/실습 12.md
@@ -1,3 +1,192 @@
 ### OData 연결 기반 제품 목록 필터링/정렬 화면 (DynamicPage + FilterBar)
 - BAS에서 “Connect to an OData Service” 옵션으로 생성된 Fiori 앱으로, OData 모델의 /Products 데이터를 가져와 상단 FilterBar에서 제품명, 카테고리, 공급자 등을 검색·필터링하고, 결과를 테이블로 표시하며 정렬(Sorter)과 범위 필터(FilterOperator.BT) 기능을 함께 사용하는 실습
-- </br>
+</br>
+
+<img width="799" height="345" alt="image" src="https://github.com/user-attachments/assets/1c9cf7ed-1cd4-49ca-9c59-ed691ae65ffa" />
+</br>
+</br>
+
+<img width="794" height="246" alt="image" src="https://github.com/user-attachments/assets/24aea5eb-4210-4daa-b727-8481ac6f244d" />
+</br>
+</br>
+</br>
+
+- Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+    "sap/ui/model/Sorter",
+    "sap/m/MessageBox"
+], (Controller, Filter, FilterOperator, Sorter, MessageBox) => {
+    "use strict";
+
+    return Controller.extend("ycl2project09.controller.Main", {
+        onInit() {
+        },
+        onSearch: function() {
+            // new Filter(path, operator, value1, value2(operator가 BT 인 경우에 씀))
+            let sValue = this.byId("inputProductName").getValue();
+            let aFilter = [];   // 필터들을 넣을 배열 선언
+            let aSorter = [];   // 정렬 객체들을 넣을 배열 선언
+            let oFilter = new Filter("ProductName", "Contains", sValue);
+
+            if(sValue) {
+                aFilter.push(oFilter);  // 배열에 필터 객체를 넣는다
+                // aFilter => [ new Filter, new Filter, ....]
+                aFilter.push(new Filter({
+                    path: "UnitsInStock",
+                    operator: FilterOperator.BT,
+                    value1: "10",
+                    value2: "100"
+                }));
+            }
+
+            // new Sorter("필드명")     // 기본 오름차순
+            // new Sorter("필드명", false)     // 오름차순
+            // new Sorter("필드명", true)     // 내림차순
+            aSorter.push( new Sorter("SupplierID", true) );
+
+            // 테이블에 필터 적용
+            this.byId("idProductsTable").getBinding("items").filter(aFilter);
+            this.byId("idProductsTable").getBinding("items").sort(aSorter);
+        },
+        onValueHelpRequest: function() {
+            sap.m.MessageBox.information("Value Help 오픈!");
+        }
+    });
+});
+```
+</br>
+
+- Main.view.xml
+```html
+<mvc:View controllerName="ycl2project09.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m"
+    >
+    
+    <f:DynamicPage id="dynamicPageId" headerExpanded="{/headerExpanded}" toggleHeaderOnTitleClick="{/titleClickable}">
+        <!-- DynamicPage Title -->
+        <!-- DynamicPage Header -->
+        <f:header>
+            <f:DynamicPageHeader pinnable="true">
+                <fb:FilterBar id="filterbar" persistencyKey="myPersKey" useToolbar="false" search=".onSearch" filterChange=".onFilterChange" afterVariantLoad=".onAfterVariantLoad">
+                    <fb:filterGroupItems>
+                        <fb:FilterGroupItem name="Name" label="Name" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <Input id="inputProductName" showValueHelp="true" valueHelpRequest="onValueHelpRequest" placeholder="ProductName" />
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="Category" label="Category" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <MultiComboBox
+                                    name="Category"
+                                    selectionChange=".onSelectionChange"
+                                    items="{
+                                        path: '/ProductCategories',
+                                        templateShareable: true
+                                    }"
+                                >
+                                    <core:Item key="{key}" text="{name}"/>
+                                </MultiComboBox>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="SupplierName" label="SupplierName" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <MultiComboBox
+                                    name="SupplierName"
+                                    selectionChange=".onSelectionChange"
+                                    items="{
+                                        path: '/ProductSuppliers',
+                                        templateShareable: true
+                                    }"
+                                >
+                                    <core:Item key="{key}" text="{name}"/>
+                                </MultiComboBox>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                    </fb:filterGroupItems>
+                </fb:FilterBar>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <Table id="idProductsTable"
+                    sticky="HeaderToolbar,ColumnHeaders"
+                    inset="false"
+                    items="{
+                        path : '/Products'
+                    }"
+                    class="sapFDynamicPageAlignContent"
+                    width="auto">
+                    <!-- filters : [{
+                            path : 'ProductName',
+                            operator : 'Contains',
+                            value1 : 'Queso'
+                        }, {
+                            path : 'UnitsInStock',
+                            operator : 'NE',
+                            value1 : '22'
+                        }]
+                        
+                        sorter : [{
+                            path : 'SupplierID',
+                            descending : true
+                        }, {
+                            path : 'UnitsInStock',
+                            descending : false
+                        }]-->
+                <headerToolbar>
+                    <Toolbar>
+                        <Title text="Products" level="H2"/>
+                    </Toolbar>
+                </headerToolbar>
+                <columns>
+                    <Column width="12em">
+                        <Text text="ProductID" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="ProductName" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="SupplierID" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="CategoryID" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="UnitPrice" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="UnitsInStock" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem>
+                        <cells>
+                            <Text text="{ProductID}" />
+                            <Text text="{ProductName}" />
+                            <Text text="{SupplierID}" />
+                            <Text text="{CategoryID}" />
+                            <Text text="{UnitPrice}" />
+                            <Text text="{UnitsInStock}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </f:content>
+        <!-- DynamicPage Footer -->
+        <f:footer>
+            <OverflowToolbar>
+                <ToolbarSpacer/>
+                <Button type="Accept" text="Accept"/>
+                <Button type="Reject" text="Reject"/>
+            </OverflowToolbar>
+        </f:footer>
+    </f:DynamicPage>
+</mvc:View>
+```
