--- a/HTML_Javascript/실습 12.md
+++ b/HTML_Javascript/실습 12.md
@@ -6,6 +6,10 @@
 </br>
 </br>
 
+<img width="797" height="351" alt="image" src="https://github.com/user-attachments/assets/405a93bf-2967-49f7-941d-1c6a17b5664c" />
+</br>
+</br>
+
 <img width="794" height="246" alt="image" src="https://github.com/user-attachments/assets/24aea5eb-4210-4daa-b727-8481ac6f244d" />
 </br>
 </br>
