Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -35,6 +35,13 @@ let sPath = oBindingContext.getPath();
 ```
 </br>
 
+### getBinding()
+- 특정 UI 컨트롤이 가지고 있는 Aggregation(집합)이 어떤 데이터와 연결되어 있는지 가져오는 함수
+```java
+getBinding("aggregationName")
+``
+</br>
+
 ### < 예제 1 >
 ```java
 onReadBooking: function(oEvent) {
