Update 웹 UI 프레임워크를 활용한 개발 1-2(10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(10.31).md
@@ -40,6 +40,10 @@ let sPath = oBindingContext.getPath();
 ```java
 getBinding("aggregationName")
 ``
+```java
+this.byId("idProductsTable").getBinding("items").filter(aFilter);
+this.byId("idProductsTable").getBinding("items").sort(aSorter);
+```
 </br>
 
 ### < 예제 1 >
