--- a/HTML_Javascript/실습 10.md
+++ b/HTML_Javascript/실습 10.md
@@ -56,6 +56,36 @@
 ```
 </br>
 
+- formatter.js
+```java
+sap.ui.define([], function() {
+    "use strict"
+
+    return {
+        fnFormatter: function(sValue) {
+            debugger;
+            let result;
+            // formatter 사용시 if문으로 value가 있는 경우를 체크하여
+            // 처리하는게 좋다. value 값만 들어오는게 아니기 때문
+            if(sValue) {    
+                let oModel = this.getView().getModel("customer");
+
+                if(sValue >= 20) result = "성인";
+                else if(sValue >= 17 && sValue < 19) result = "중학생";
+                else if(sValue >= 14 && sValue < 17) result = "초등학생";
+                else if(sValue >= 8 && sValue < 14) result = "초등학생";
+                else result = "아동";
+                return result;
+            }
+        },
+        setStringData: function() {
+            // 포메터 함수 추가
+        }
+    }
+})
+```
+</br>
+
 - Booking.controller.js
 ```java
 sap.ui.define([
