--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -8,3 +8,6 @@
 | **Entity** | Entity Set 안에 들어 있는 한 줄의 데이터 (레코드) | 예: 주문번호가 1001인 주문 데이터 |
 | **Property** | Entity 안에 포함된 각각의 필드 (열, 속성) | 예: OrderID, CustomerName, OrderDate |
 | **Entity Type** | Entity의 전체 구조와 필드 정의 (설계도, 스키마) | 예: Orders 테이블의 필드 구조 정의 |
+</br>
+
+### OData 요청 예시
