Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -11,3 +11,22 @@
 </br>
 
 ### OData 요청 예시
+```bash
+https://port8081-workspaces-ws-kzwp3.us10.trial.applicationstudio.cloud.sap/northwind/northwind.svc/Customers?$format=json&$filter=CustomerID eq 'ALFKI'
+```
+- 서버(Northwind 서비스)에 CustomerID가 'ALFKI'인 고객 데이터를 요청함
+- 응답(Response)은 JSON 형식으로 받음
+</br>
+
+### 데이터 처리 방식
+1) 로컬(Local) 데이터
+   - 이미 가지고 있는 데이터는 `.getData()` 또는 `.getProperty()`로 접근하여 사용
+2) 서버(Server) 데이터
+   - 필요한 데이터를 요청(Request) 해서 응답(Response) 으로 받음
+   - 받은 데이터는 JSON 형식이며, 이를 JSONModel 에 담아 활용할 수 있음
+   - 모델에 데이터를 넣거나 수정할 때는 setData() 또는 setProperty()를 사용함
+</br>
+
+### DynamicPage 구성
+- `<DynamicPage>`의 `<content>` 영역에는 하나의 컨텐츠만 들어갈 수 있음
+- 여러 UI 요소(Button, Table 등)를 함께 넣고 싶다면 `<VBox>`로 감싸서 하나의 컨텐츠로 구성해야 함
