Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -1,4 +1,14 @@
 # 11/03 기록
+### 클라이언트 vs 서버 모델
+1) Client (Local) Model
+   - JSONModel을 사용
+   - 로컬 데이터(이미 가지고 있는 데이터)를 화면과 연결할 때 사용
+</br>
+
+2) Server Model
+   - ODataModel V2를 사용
+   - 서버에 있는 데이터를 OData 서비스로 요청하고, 응답을 화면에 바인딩할 때 사용
+</br>
 
 ### 🌐 OData 기본 개념 정리
 
