Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -4,10 +4,16 @@
    - JSONModel을 사용
    - 로컬 데이터(이미 가지고 있는 데이터)를 화면과 연결할 때 사용
 
-
 2) Server Model
    - ODataModel V2를 사용
    - 서버에 있는 데이터를 OData 서비스로 요청하고, 응답을 화면에 바인딩할 때 사용
+</br>
+
+### OData 서비스 활용
+- 샘플 Northwind 서비스와 연결하여 프로그램 생성 가능
+- 연결 시 OData Model이 자동 생성됨
+- 이름 없이 `기본 모델(Default Model)`로 설정
+- 모델 설정 정보는 `manifest.json`에 기록됨
 </br>
 
 ### 🌐 OData 기본 개념 정리
