Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -48,3 +48,24 @@ https://port8081-workspaces-ws-kzwp3.us10.trial.applicationstudio.cloud.sap/nort
 ### DynamicPage 구성
 - `<DynamicPage>`의 `<content>` 영역에는 하나의 컨텐츠만 들어갈 수 있음
 - 여러 UI 요소(Button, Table 등)를 함께 넣고 싶다면 `<VBox>`로 감싸서 하나의 컨텐츠로 구성해야 함
+</br>
+
+```java
+"routes": [
+        {
+          "name": "RouteMain",      // 이름 마음대로 지정
+          "pattern": ":?query:",
+          "target": [
+            "TargetMain"
+          ]
+        }
+      ]
+
+
+      "targets": {
+        "TargetMain": {
+          "id": "Main",      // view의 id. 생략가능.
+          "name": "Main"
+        }
+      }
+```
