Update 웹 UI 프레임워크를 활용한 개발 1-2(11.03).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 1-2(11.03).md
@@ -65,7 +65,7 @@ https://port8081-workspaces-ws-kzwp3.us10.trial.applicationstudio.cloud.sap/nort
       "targets": {
         "TargetMain": {
           "id": "Main",      // view의 id. 생략가능.
-          "name": "Main"
+          "name": "Main"      // 파일명. 오타나면 화면에 출력 x
         }
       }
 ```
