Update 실습 (UX400 기초 다지기).md

--- a/HTML_Javascript/실습 (UX400 기초 다지기).md
+++ b/HTML_Javascript/실습 (UX400 기초 다지기).md
@@ -1,3 +1,97 @@
+- Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller", // SAPUI5 MVC 컨트롤러
+    "sap/ui/model/json/JSONModel", // JSON 데이터를 담는 모델
+    "sap/ui/core/Fragment", // UI Fragment (팝업, 모달 등)
+    "sap/btp/ux400solving/model/formatter" // 화면에서 데이터를 포맷팅하는 함수
+], (Controller, JSONModel, Fragment, formatter) => {
+    "use strict";
+
+    return Controller.extend("sap.btp.ux400solving.controller.Main", {
+        formatFile: formatter, // 포맷터를 컨트롤러에서 사용
+
+        // 1. 초기 실행 시 호출
+        onInit() {
+            // 랜덤 숫자를 저장할 배열을 가진 모델 생성
+            let oData = {
+                RandomValue: []
+            };
+            let oModel = new JSONModel(oData); 
+            this.getView().setModel(oModel, "RandomModel"); // 뷰에 모델 연결
+        },
+
+        // 2. '랜덤 숫자 생성' 버튼 클릭 시
+        onRandomPress: function() {
+            // 1~100 사이 랜덤 숫자 생성
+            let randomData = Math.floor(Math.random() * 100) + 1;
+
+            // Input 필드에 랜덤 숫자 표시
+            this.byId("InputRandom").setValue(randomData);
+
+            // 모델에서 기존 랜덤 값 배열 가져오기
+            let rData = this.getView().getModel("RandomModel").getProperty("/RandomValue");
+
+            // 새 랜덤 숫자를 배열에 추가
+            rData.push({ Random_val: randomData });
+
+            // 모델 업데이트
+            let rModel = this.getView().getModel("RandomModel");
+            rModel.setProperty("/RandomValue", rData);
+        },
+
+        // 3. '제품 보기' 버튼 클릭 시 다이얼로그 열기
+        onOpenProduct: function() {
+            let oModel = this.getView().getModel(); // 메인 모델 가져오기
+            let oDialog = sap.ui.getCore().byId("idDialog"); // 다이얼로그 ID 확인
+
+            if (oDialog) { 
+                oDialog.open(); // 이미 다이얼로그가 있으면 바로 열기
+            } else {
+                // 없으면 Fragment를 불러와서 다이얼로그 생성
+                Fragment.load({
+                    name: "sap.btp.ux400solving.view.fragment.Products", // Fragment 경로
+                    type: "XML",
+                    controller: this
+                }).then(function(mDialog) {
+                    mDialog.setModel(oModel); // 모델 연결
+                    mDialog.open(); // 다이얼로그 열기
+                })
+            }
+        },
+
+        // 4. 다이얼로그 닫기
+        onClose: function() {
+            sap.ui.getCore().byId("idDialog").close();
+        },
+
+        // 5. Input 값 변경 시 이벤트
+        onValueChange: function(oEvent) {
+            let iValue = Number(oEvent.getParameter("value")); // 입력 값 가져오기
+            let oInput = oEvent.getSource(); // 입력한 Input 객체
+
+            // 1~100 범위 체크
+            if (iValue < 0 || iValue > 100) {
+                oInput.setValueState("Error"); // 오류 표시
+                oInput.setValueStateText("1 이상 100 이하의 숫자를 입력하세요."); // 오류 메시지
+            } else {
+                // 범위 내 값이면 모델에 추가
+                let rData = this.getView().getModel("RandomModel").getProperty("/RandomValue");
+                rData.push({ Random_val: iValue });
+
+                let rModel = this.getView().getModel("RandomModel");
+                rModel.setProperty("/RandomValue", rData);
+            }
+        }
+    });
+});
+```
+</br>
+
+- Main.view.xml
+
+- Products.fragment.xml
+
 - formatter.js
 ```java
 sap.ui.define([], function() {
@@ -16,9 +110,3 @@ sap.ui.define([], function() {
 })
 ```
 </br>
-
-- Main.controller.js
-
-- Main.view.xml
-
-- Products.fragment.xml
